## Change log

## 1.2.1
* Dev - Enabled the sorting of the gallery field
* Dev - General testing to ensure compatibility with latest WordPress version (5.3).
* Dev - Checking compatibility with LSX 2.6 release.

### 1.2.0 - September 27 2019
* Dev - Added in the Review Schema integrated with Yoast WordPress SEO
* Dev - Adding the .gitattributes file to remove unnecessary files from the WordPress version.
* Dev - Enabled the sorting of the gallery field
* Fix - Updating files and fixing php warning notices.

### 1.1.1
* Fix - Travis and dependency fixes 
* Dev - API Class Removal
* Dev - No sidebars on single or archive

### 1.1.0
* Dev - Support LSX Theme 2.0 new designs
* Added compatibility with LSX 2.0
* Added compatibility with Tour Operator 1.1
* Dev - New project structure
* Fix - Fixed scripts/styles loading order
* Fix - Fixed small issues
* Dev - Updated the the way the post type registers to match the refactored TO plugin
* Dev - Updated the registering of the metaboxes

### 1.0.4
* Dev - Standardized the Gallery and Video fields

### 1.0.3
* Fix - Make the addon compatible with the latest version from TO Search addon
* Fix - API key and email grabbed from the correct settings tab
* Fix - Added TO Search as subtab on LSX TO settings page
* Dev - Fixed menu navigation improved
* Fix - Code refactored to follow the latest Tour Operator plugin workflow
* Fix - Small fixes on front-end fields
* Fix - Fixed content_part filter for plugin and add-ons

### 1.0.2
* Fix - Fixed all prefixes replaces (to_ > lsx_to_, TO_ > LSX_TO_)

### 1.0.1
* Fix - Reduced the access to server (check API key status) using transients
* Fix - Made the API URLs dev/live dynamic using a prefix "dev-" in the API KEY

### 1.0.0
* First Version